syntax = "proto3";

package user;

option go_package = "./userpb";

import "google/protobuf/empty.proto";

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc ListUsers(google.protobuf.Empty) returns (ListUsersResponse);
}

message UserRequest {
  int32 user_id = 1;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
  // other fields
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message CreateUserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message ListUsersResponse {
    repeated User users = 1;
}

message User {
    string id = 1;
    string name = 2;
}